Add google translate, add redux and get API working
