# server/common/google/translate.py
@@ -1,0 +1,24 @@
+from google.cloud import translate_v2 as translate
+
+translate_client = translate.Client()
+
+FLAG_TO_LANGUAGE_CODE_DICT = {
+    'GB': 'EN',
+    'ES': 'ES',
+    'FR': 'FR',
+    'DEU': 'DE',
+}
+
+def translate_text(text, source, target):
+    # Text can also be a sequence of strings, in which case this method
+    # will return a sequence of results for each text.
+
+    source = FLAG_TO_LANGUAGE_CODE_DICT.get(source)
+    target = FLAG_TO_LANGUAGE_CODE_DICT.get(target)
+
+    if not (source or target):
+        return ''
+
+    result = translate_client.translate(text, source_language=source, target_language=target)
+
+    return result['translatedText']
