# server/openapi_server/controllers/translate_controller.py
@@ -4,6 +4,8 @@ import six
 from openapi_server.models.translated_text import TranslatedText  # noqa: E501
 from openapi_server import util
 
+from common.google.translate import translate_text
+
 
 def translate_text(body):  # noqa: E501
     """Translate a sentence
@@ -17,4 +19,10 @@ def translate_text(body):  # noqa: E501
     """
     if connexion.request.is_json:
         body = TranslatedText.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+
+    text = body.text
+    source = body.source
+    target = body.target
+    translated_text = translate_text(text, source, target)
+
+    return translated_text
