# server/openapi_server/models/excerpt.py
@@ -1,0 +1,92 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class Excerpt(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, excerpt=None, language=None):  # noqa: E501
+        """Excerpt - a model defined in OpenAPI
+
+        :param excerpt: The excerpt of this Excerpt.  # noqa: E501
+        :type excerpt: str
+        :param language: The language of this Excerpt.  # noqa: E501
+        :type language: str
+        """
+        self.openapi_types = {
+            'excerpt': str,
+            'language': str
+        }
+
+        self.attribute_map = {
+            'excerpt': 'excerpt',
+            'language': 'language'
+        }
+
+        self._excerpt = excerpt
+        self._language = language
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Excerpt':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Excerpt of this Excerpt.  # noqa: E501
+        :rtype: Excerpt
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def excerpt(self):
+        """Gets the excerpt of this Excerpt.
+
+
+        :return: The excerpt of this Excerpt.
+        :rtype: str
+        """
+        return self._excerpt
+
+    @excerpt.setter
+    def excerpt(self, excerpt):
+        """Sets the excerpt of this Excerpt.
+
+
+        :param excerpt: The excerpt of this Excerpt.
+        :type excerpt: str
+        """
+        if excerpt is None:
+            raise ValueError("Invalid value for `excerpt`, must not be `None`")  # noqa: E501
+
+        self._excerpt = excerpt
+
+    @property
+    def language(self):
+        """Gets the language of this Excerpt.
+
+
+        :return: The language of this Excerpt.
+        :rtype: str
+        """
+        return self._language
+
+    @language.setter
+    def language(self, language):
+        """Sets the language of this Excerpt.
+
+
+        :param language: The language of this Excerpt.
+        :type language: str
+        """
+
+        self._language = language
